# base_pxfoundations

./: CMakeLists.txt  LICENSE
include/base_pxfoundations/foundation/: Ps.hpp  PsAlignedMalloc.hpp  PsAlloca.hpp  PsAllocator.hpp  PsArray.hpp  PsAtomic.hpp  PsBasicTemplates.hpp  PsBitUtils.hpp  PsBroadcast.hpp  PsCpu.hpp  PsFPU.hpp  PsFoundation.hpp  PsHash.hpp  PsHashInternals.hpp  PsHashMap.hpp  PsHashSet.hpp  PsInlineAllocator.hpp  PsInlineArray.hpp  PsIntrinsics.hpp  PsMathUtils.hpp  PsMutex.hpp  PsPool.hpp  PsSList.hpp  PsSocket.hpp  PsSort.hpp  PsSortInternals.hpp  PsString.hpp  PsSync.hpp  PsTempAllocator.hpp  PsThread.hpp  PsTime.hpp  PsUserAllocated.hpp  PsUtilities.hpp  PsVecMath.hpp  PsVecMathAoSScalar.hpp  PsVecMathAoSScalarInline.hpp  PsVecMathSSE.hpp  PsVecMathUtilities.hpp  PsVecQuat.hpp  PsVecTransform.hpp  (+30 more)
include/base_pxfoundations/foundation/unix/: PsUnixFPU.hpp  PsUnixIntrinsics.hpp  PsUnixTrigConstants.hpp  PxUnixIntrinsics.hpp
include/base_pxfoundations/foundation/unix/neon/: PsUnixNeonAoS.hpp  PsUnixNeonInlineAoS.hpp
include/base_pxfoundations/foundation/unix/sse2/: PsUnixSse2AoS.hpp  PsUnixSse2InlineAoS.hpp
include/base_pxfoundations/foundation/windows/: PsWindowsAoS.hpp  PsWindowsFPU.hpp  PsWindowsInclude.hpp  PsWindowsInlineAoS.hpp  PsWindowsIntrinsics.hpp  PsWindowsTrigConstants.hpp  PxWindowsIntrinsics.hpp
src/: PsAllocator.cpp  PsAssert.cpp  PsFoundation.cpp  PsMathUtils.cpp  PsString.cpp  PsTempAllocator.cpp  PsUtilities.cpp
src/unix/: PsUnixAtomic.cpp  PsUnixCpu.cpp  PsUnixFPU.cpp  PsUnixMutex.cpp  PsUnixPrintString.cpp  PsUnixSList.cpp  PsUnixSocket.cpp  PsUnixSync.cpp  PsUnixThread.cpp  PsUnixTime.cpp
src/windows/: PsUWPThread.cpp  PsWindowsAtomic.cpp  PsWindowsCpu.cpp  PsWindowsFPU.cpp  PsWindowsMutex.cpp  PsWindowsPrintString.cpp  PsWindowsSList.cpp  PsWindowsSocket.cpp  PsWindowsSync.cpp  PsWindowsThread.cpp  PsWindowsTime.cpp
